--- a/threesteplogin/src/main/res/layout/fragment_step2.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step2.xml
@@ -30,6 +30,7 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/et_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
