--- a/threesteplogin/src/main/res/layout/fragment_step3.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step3.xml
@@ -15,20 +15,18 @@
             android:layout_marginTop="36dp"
             android:layout_marginEnd="176dp"
             android:text="@string/registration_complete"
-            app:layout_constraintBottom_toTopOf="@+id/tv_your_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_your_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="44dp"
         android:ems="8"
         android:text="@string/your_name"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/tv_registration_complete"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -37,11 +35,10 @@
         android:id="@+id/tv_your_surname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="36dp"
         android:ems="8"
+        android:textAlignment="center"
         android:text="@string/your_surname"
+        app:layout_constraintTop_toBottomOf="@+id/tv_your_name"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -50,39 +47,36 @@
         android:id="@+id/tv_your_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="32dp"
         android:ems="8"
+        android:textAlignment="center"
         android:text="@string/your_email"
+        app:layout_constraintTop_toBottomOf="@+id/tv_your_surname"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_your_username"
-        android:layout_width="152dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:ems="8"
         android:text="@string/your_username"
+        app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.397"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_your_password"
-        android:layout_width="147dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:ems="8"
         android:text="@string/your_password"
+        app:layout_constraintTop_toBottomOf="@+id/tv_your_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.42"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
