--- a/threesteplogin/src/main/res/layout/fragment_step1.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step1.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/step1_constraint"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#E8EAF6">
+    android:layout_height="match_parent">
 
 
     <EditText
         android:id="@+id/et_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginStart="99dp"
         android:layout_marginTop="97dp"
         android:layout_marginEnd="99dp"
@@ -23,13 +22,12 @@
         app:layout_constraintBottom_toTopOf="@+id/et_surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.795" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_surname"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginStart="98dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="96dp"
