--- a/threesteplogin/src/main/res/layout/fragment_step3.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step3.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="8"
-        android:text="@string/your_name"
+        tools:text="@string/your_name"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/tv_registration_complete"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_surname"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:ems="8"
         android:textAlignment="center"
-        android:text="@string/your_surname"
+        tools:text="@string/your_surname"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_name"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:ems="8"
         android:textAlignment="center"
-        android:text="@string/your_email"
+        tools:text="@string/your_email"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_surname"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_username"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:ems="8"
-        android:text="@string/your_username"
+        tools:text="@string/your_username"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:ems="8"
-        android:text="@string/your_password"
+        tools:text="@string/your_password"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step3"
         app:layout_constraintEnd_toEndOf="parent"
