--- a/threesteplogin/src/main/res/layout/fragment_step2.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step2.xml
@@ -9,7 +9,7 @@
     <EditText
         android:id="@+id/et_username"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="320dp"
         android:layout_marginBottom="85dp"
         android:ems="10"
@@ -23,17 +23,18 @@
     <EditText
         android:id="@+id/et_password"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginStart="99dp"
         android:layout_marginEnd="99dp"
         android:layout_marginBottom="193dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/et_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_username" />
 
     <Button
         android:id="@+id/btn_confirm_step2"
