--- a/threesteplogin/src/main/res/layout/fragment_step3.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step3.xml
@@ -17,7 +17,8 @@
             android:text="@string/registration_complete"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_your_name"
@@ -29,7 +30,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_registration_complete"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_surname"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_your_surname"
@@ -41,7 +43,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_your_name"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_your_email"
@@ -53,7 +56,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_your_surname"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_username"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_your_username"
@@ -65,7 +69,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_your_password"
@@ -77,7 +82,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_your_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"/>
 
     <Button
         android:id="@+id/btn_confirm_step3"
