--- a/threesteplogin/src/main/res/layout/fragment_step1.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step1.xml
@@ -10,49 +10,47 @@
     <EditText
         android:id="@+id/et_name"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="97dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="78dp"
-        android:autofillHints=""
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/name"
         android:inputType="textPersonName"
+        android:padding="10dp"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/et_surname"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_surname"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="98dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="96dp"
-        android:autofillHints=""
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/surname"
         android:inputType="textPersonName"
+        android:padding="10dp"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/et_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="97dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginBottom="164dp"
-        android:autofillHints=""
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_surname" />
 
     <Button
         android:id="@+id/btn_confirm_step1"
