--- a/threesteplogin/src/main/res/layout/fragment_step3.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step3.xml
@@ -15,6 +15,7 @@
             android:layout_marginTop="36dp"
             android:layout_marginEnd="176dp"
             android:text="@string/registration_complete"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,11 +28,13 @@
         android:ems="8"
         tools:text="@string/your_name"
         android:textAlignment="center"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_registration_complete"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/tv_your_surname"
@@ -40,11 +43,13 @@
         android:ems="8"
         android:textAlignment="center"
         tools:text="@string/your_surname"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_name"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/tv_your_email"
@@ -53,11 +58,13 @@
         android:ems="8"
         android:textAlignment="center"
         tools:text="@string/your_email"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_surname"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/tv_your_username"
@@ -66,11 +73,13 @@
         android:textAlignment="center"
         android:ems="8"
         tools:text="@string/your_username"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/tv_your_password"
@@ -79,11 +88,13 @@
         android:textAlignment="center"
         android:ems="8"
         tools:text="@string/your_password"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_username"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:maxLines="1"/>
 
     <Button
         android:id="@+id/btn_confirm_step3"
