--- a/threesteplogin/src/main/res/layout/fragment_step1.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step1.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/name"
+        android:autofillHints="@string/name"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:maxLines="1"
@@ -29,6 +30,7 @@
         android:ems="10"
         android:hint="@string/surname"
         android:inputType="textPersonName"
+        android:autofillHints="@string/surname"
         android:padding="10dp"
         android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/et_email"
@@ -44,6 +46,7 @@
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:autofillHints="@string/email"
         android:padding="10dp"
         android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_step1"
