--- a/threesteplogin/src/main/res/layout/fragment_step3.xml
+++ b/threesteplogin/src/main/res/layout/fragment_step3.xml
@@ -23,9 +23,8 @@
 
     <TextView
         android:id="@+id/tv_your_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="8"
         tools:text="@string/your_name"
         android:textAlignment="center"
         android:padding="10dp"
@@ -33,14 +32,12 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_your_surname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"
-        android:maxLines="1"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_your_surname"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="8"
         android:textAlignment="center"
         tools:text="@string/your_surname"
         android:padding="10dp"
@@ -48,14 +45,12 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_your_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"
-        android:maxLines="1"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_your_email"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="8"
         android:textAlignment="center"
         tools:text="@string/your_email"
         android:padding="10dp"
@@ -63,30 +58,26 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_your_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"
-        android:maxLines="1"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_your_username"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:ems="8"
         tools:text="@string/your_username"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
         app:layout_constraintBottom_toTopOf="@+id/tv_your_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textStyle="bold"
-        android:maxLines="1"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_your_password"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:ems="8"
         tools:text="@string/your_password"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_your_username"
@@ -94,8 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:maxLines="1"/>
-
+        />
     <Button
         android:id="@+id/btn_confirm_step3"
         android:layout_width="0dp"
